# mailsort

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SYSTEM_TEST_PLAN.md  WEB_UI_PLAN.md  config.yaml.example  docker-compose.yml  pyproject.toml
.windsurf/rules/: general.md  mailsort.md
.windsurf/workflows/: commit.md  generate-test-scenarios.md
docs/: architecture.md  configuration.md  operations.md  prd.md
docs/design/: audit.md  classification.md  data-models.md  jmap-integration.md  learning.md  web-ui.md
docs/dev/: analyze-mockup.html  auth-mockup.html  changelog.md  decisions.md  design-ideas.md
docs/methodology/: ai-pair-programming.md  architecture-documentation.md  system-test-methodology.md
docs/planning/: open-questions.md  phases.md  system-test-plan.md
scripts/: analyze_list_unsubscribe.py
src/mailsort/: bootstrap.py  config.py  health.py  main.py  orchestrator.py  scheduler.py
tests/: conftest.py  test_audit_writer.py  test_auth.py  test_bootstrap.py  test_config.py  test_contacts.py  test_descriptions.py  test_docker_delegation.py  test_error_handling.py  test_folder_descriptions.py  test_health.py  test_integration.py  test_jmap_models.py  test_jmap_move.py  test_learner.py  test_llm.py  test_mailbox_tree.py  test_migrations.py  test_mover.py  test_observability.py  test_orchestrator.py  test_pipeline.py  test_read_only.py  test_rules.py  test_scheduler.py  test_web_analyze.py  test_web_audit.py
tests/fixtures/: sample_emails.json  sample_mailboxes.json
tests/system/: README.md  config.test.yaml  load_fixtures.py  (+3 more)
(+36 files in other folders)
