[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailsort"
version = "0.1.0"
description = "Fastmail inbox classifier and sorter"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "anthropic>=0.28",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
]

[project.scripts]
mailsort = "mailsort.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mailsort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
